VA-40-6 Fix showing notification text on Firefox
Firefox had some trouble understanding the combination of visiblity,
opacity and animation properties. Now the notification div has explicit
default properties that make it visible and the auto-hide class
explicitly transitions the properties to hidden values.

--- a/va-hakija/web/va/style/main.less
+++ b/va-hakija/web/va/style/main.less
@@ -203,26 +203,21 @@ div.notification-container {
     height: 45px;
     width: 142px;
 
-    visibility: hidden;
-    opacity: 0;
-    transition: visibility 0.5s, opacity 0.5s linear;
-
-    &.animate {
-      visibility: visible;
-      opacity: 1;
-      animation: autoHide 0s linear 5s forwards;
+    visibility: visible;
+    opacity: 1;
+    &.auto-hide {
+      visibility: hidden;
+      opacity: 0;
+      transition:
+        opacity 1s linear 5s,
+        visibility 1s linear 5s;
     }
+
     &.success {
       color: @mantis-green;
     }
     &.error {
       color: @bright-red;
-    }
-    @keyframes autoHide {
-      to {
-        visibility: hidden;
-        opacity: 0;
-      }
     }
   }
 }
